# pointcloud_registration

./: CMakeLists.txt  README.md  main.cpp
common/: math_utils.h  point_cloud_utils.h  point_types.h
include/: icp_3d.h  kdtree.h  ndt_3d.h
log/: main.INFO  main.gj.gj.log.INFO.20231019-164547.20080  main.gj.gj.log.INFO.20231019-165447.22787  main.gj.gj.log.INFO.20231020-070632.22032  main.gj.gj.log.INFO.20231020-113825.11066  main.gj.gj.log.INFO.20231020-114304.12597
output/: icp_line_trans.pcd  icp_plane_trans.pcd  icp_trans.pcd  ndt_trans.pcd  pcl_icp_trans.pcd  pcl_ndt_trans.pcd
src/: icp_3d.cc  kdtree.cc  ndt_3d.cc  point_cloud_utils.cc
